Finishing db CRUD